--- a/applications/luci-app-zerotier/Makefile
+++ b/applications/luci-app-zerotier/Makefile
@@ -9,22 +9,9 @@ include $(TOPDIR)/rules.mk
 LUCI_TITLE:=LuCI for Zerotier
 LUCI_DEPENDS:=+zerotier
 LUCI_PKGARCH:=all
-PKG_VERSION:=1.12.1
-PKG_RELEASE:=
+
+PKG_NAME:=luci-app-zerotier
 
 include $(TOPDIR)/feeds/luci/luci.mk
-
-define Package/luci-app-zerotier/prerm
-#!/bin/sh
-
-/etc/init.d/zerotier enable
-/etc/init.d/luci_zerotier disable
-/etc/init.d/luci_zerotier stop
-exit 0
-endef
-
-define Package/luci-app-zerotier/conffiles
-/etc/config/zero
-endef
 
 # call BuildPackage - OpenWrt buildroot signature
